docs/book/samples/appc/order_alpha_check.out
error[formatting]: function declarations appear in alphabetical order: `main` before `zeta`
  --> order_alpha_check.kso:4:1
   4 | main = print "{zeta 1}"
       ^
